# vesper_insight

./: .gitignore  Cargo.toml  README.md  Taskfile.yml
src/: main.rs  models.rs
src/brain/: .env.template  alerts.db  main.py  model.py  processor.py  storage.py
src/portal/: index.html  package-lock.json  package.json  tsconfig.json
src/portal/src/: main.ts  styles.css
src/portal/src-tauri/: Cargo.toml  tauri.conf.json
src/portal/src-tauri/capabilities/: default.json
src/portal/src-tauri/src/: lib.rs
src/portal/src/lib/: prisma.ts
tests/: kafka_connectivity.rs
