[package]
name = "vesper-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
chrono = "0.4.42"
etherparse = "0.19.0"
pcap = "2.4.0"
rdkafka = "0.38.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.147"
tokio = { version = "1.48.0", features = ["full"] }
